fixed background image not showing in production

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
     color: #FFFFFF;
     font-size: 72px;
     font-weight: bold;
-    background-image: url('img/hero-bg.jpg');
+    background-image: url('assets/hero-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -114,7 +114,7 @@
     align-items: flex-start;
     justify-content: space-between;
     padding-top: 50px;
-    background-image: url('img/hero-bg-2.png');
+    background-image: url('assets/hero-bg-2.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
